spacing fix

--- a/src/index.css
+++ b/src/index.css
@@ -72,7 +72,7 @@ svg.cursor-pointer:hover {
 /*added top margin*/
 .navbar {
   margin-bottom: 5%;
-  margin-top: 10%;
+  margin-top: 5%;
 }
 
 .navbar-content {
